--- a/jpress-web/src/main/webapp/WEB-INF/views/admin/_layout/_header.html
+++ b/jpress-web/src/main/webapp/WEB-INF/views/admin/_layout/_header.html
@@ -1,8 +1,8 @@
 <header class="main-header">
     <!-- Logo -->
     <a href="#(CPATH)/" target="_blank" class="logo">
-        <span class="logo-mini"><b>JPr</b></span>
-        <span class="logo-lg"><b>JPress</b></span>
+        <span class="logo-mini"><b>OIA</b></span>
+        <span class="logo-lg"><b>oiling-admin</b></span>
     </a>
     <nav class="navbar navbar-static-top">
         <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
